@@ -16,6 +16,7 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: the Win shortcuts doesn't work in the UserAction examples
     FIXED: [ 2091314 ] krviewer does not remember its window size
     FIXED: [ 2219012 ] user action icons are not saved
     FIXED: [ 2116505 ] Total Commander selection behavior broken
